--- a/3DArtMuseum.css
+++ b/3DArtMuseum.css
@@ -10,7 +10,6 @@ body{margin:0;padding:0;overflow:hidden;-webkit-user-select:none;-moz-user-selec
 
 #pleasewaitcontainer{position:absolute;bottom:0;width:100%;height:100px;}
 
-#buttonenter{
         position:absolute;
         bottom: 290px;
         width:100%;
@@ -148,7 +147,7 @@ and (min-device-width : 320px)
 and (max-device-width : 480px) {
 
     .fondo{
-        background-image: url('img/Puerta2.jpg'); 
+        background-image: url('Puerta2.jpg'); 
         background-size: cover; 
         background-attachment: fixed; 
         background-repeat: no-repeat;
@@ -201,7 +200,7 @@ and (max-device-width : 480px) {
 @media only screen 
 and (min-width : 321px) {
     .fondo{
-        background-image: url('img/Puerta2.jpg'); 
+        background-image: url('Puerta2.jpg'); 
         background-size: cover; 
         background-attachment: fixed; 
         background-repeat: no-repeat;
