--- a/3DArtMuseum.css
+++ b/3DArtMuseum.css
@@ -29,7 +29,7 @@ body{margin:0;padding:0;overflow:hidden;-webkit-user-select:none;-moz-user-selec
 }
 
 .fondo{
-    background-image: url('Puerta1.jpg'); 
+    background-image: url('recursos/imagenes/Puerta1.jpg'); 
     background-size: cover; 
     background-attachment: fixed; 
     background-repeat: no-repeat;
@@ -172,7 +172,7 @@ and (min-device-width : 320px)
 and (max-device-width : 480px) {
 
     .fondo{
-        background-image: url('Puerta2.jpg'); 
+        background-image: url('recursos/imagenes/Puerta2.jpg'); 
         background-size: cover; 
         background-attachment: fixed; 
         background-repeat: no-repeat;
@@ -225,7 +225,7 @@ and (max-device-width : 480px) {
 @media only screen 
 and (min-width : 321px) {
     .fondo{
-        background-image: url('Puerta2.jpg'); 
+        background-image: url('recursos/imagenes/Puerta2.jpg'); 
         background-size: cover; 
         background-attachment: fixed; 
         background-repeat: no-repeat;
