--- a/3DArtMuseum.css
+++ b/3DArtMuseum.css
@@ -130,7 +130,7 @@ body{margin:0;padding:0;overflow:hidden;-webkit-user-select:none;-moz-user-selec
 
 #info{position:absolute;left:0px;right:0px;bottom:0px;width:100%;margin:0 auto;display:none;}
 
-#infotext{margin:10px;padding:10px;background:rgba(0,0,0,0.6);border-radius:15px;z-index:701;font-family:Arial;font-size:16px;color:white;}
+#infotext{margin:10px;padding:10px;background:rgba(0,0,0,0.6);border-radius:15px;z-index:701;font-family: Mathilde_Castleland !important;font-size:55px !important;color:white;}
 
 #about{position:absolute;right:10px;top:10px;padding-top:10px;padding-bottom:10px;padding-left:15px;padding-right:15px;background:rgba(0,0,0,0.6);border-radius:15px;z-index:702;font-family:Arial;font-size:16px;line-height:32px;color:white;}
 
