--- a/3DArtMuseum.css
+++ b/3DArtMuseum.css
@@ -277,7 +277,8 @@ and (min-width : 321px) {
 /* Smartphones (portrait) */
 @media only screen 
 and (max-width : 320px) {
- 
+    
+    #infotext{margin:10px;padding:10px;background:rgba(0,0,0,0.6);border-radius:15px;z-index:701;font-family: Mathilde_Castleland !important;font-size:35px !important;color:white;}
 }
  
 /* iPads (portrait & landscape) */
